# doujinshi-dl

./: CLAUDE.md  Dockerfile  README.rst  pyproject.toml
.github/workflows/: docker-image.yml
doujinshi_dl/: __init__.py  cmdline.py  command.py  constant.py  downloader.py  logger.py  utils.py
doujinshi_dl/core/: config.py  downloader.py  logger.py  plugin.py  registry.py
doujinshi_dl/core/utils/: __init__.py  db.py  fs.py  html.py  http.py
doujinshi_dl/viewer/: main.css  main.html
nhentai/: cmdline.py  command.py  parser.py
