[tool.poetry]
name = "doujinshi-dl"
version = "2.0.0"
description = "doujinshi downloader"
authors = ["Ricter Z <ricterzheng@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/RicterZ/doujinshi-dl"
repository = "https://github.com/RicterZ/doujinshi-dl"
packages = [{include = "doujinshi_dl"}]
include = ["doujinshi_dl/viewer/**"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
soupsieve = "^2.6"
beautifulsoup4 = "^4.12.3"
tabulate = "^0.9.0"
iso8601 = "^1.1.0"
urllib3 = "^1.26.20"
httpx = "^0.28.1"
chardet = "^5.2.0"

# Optional plugin dependencies
doujinshi-dl-nhentai = {version = ">=1.0.0", optional = true}

[tool.poetry.extras]
nhentai = ["doujinshi-dl-nhentai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
doujinshi-dl = 'doujinshi_dl.command:main'
